--- a/filebeat.yml
+++ b/filebeat.yml
@@ -13,8 +13,8 @@ filebeat.inputs:
   paths:
     - ${INPUT_PATH:/volume/*.log}
 
-processors:
-- add_cloud_metadata:
+#processors:
+#- add_cloud_metadata:
 
 # elasticsearch output info
 #output.elasticsearch:
@@ -48,9 +48,3 @@ setup.dashboards.retry.maximum: 20
 # enable modules
 filebeat.modules:
 - module: nginx
-  access:
-    enabled: true
-    var.paths: ["${NGINX_ACCESS_PATH:/var/log/nginx/access.log}"]
-  error:
-    enabled: true
-    var.paths: ["${NGINX_ERROR_PATH:/var/log/nginx/error.log}"]
