--- a/filebeat.yml
+++ b/filebeat.yml
@@ -17,7 +17,7 @@ output.redis:
   hosts: '${REDIS_HOSTS:192.168.10.212:10021}'
   password: '${REDIS_PASSWORD:2lb097mcQ23iESrB}'
   key: '${REDIS_KEY:product_logsrv}'
-  timeout: '${REDIS_TIMEOUT:60}'
+# timeout: '${REDIS_TIMEOUT:60}'
   db: '${REDIS_DB:2}'
 filebeat.modules:
 - module: nginx
