--- a/filebeat.yml
+++ b/filebeat.yml
@@ -8,9 +8,9 @@ filebeat.inputs:
   enabled: true
   paths:
     - ${INPUT_PATH:/volume/*.log}
-
+    - ${INPUT1_PATH:/volume/*.log}
 processors:
-- add_cloud_metadata: ~
+- add_cloud_metadata:
 
 output.redis:
   enabled: true
@@ -19,5 +19,4 @@ output.redis:
   key: '${REDIS_KEY:product_logsrv}'
 # timeout: '${REDIS_TIMEOUT:60}'
   db: '${REDIS_DB:2}'
-filebeat.modules:
-- module: nginx
+
