--- a/filebeat.yml
+++ b/filebeat.yml
@@ -15,10 +15,10 @@ filebeat.inputs:
 
   exclude_lines: ['^$']
   
-  multiline:
-    pattern: '^\d{4}-\d{1,2}-\d{1,2}\s\d{1,2}:\d{1,2}:\d{1,2}'
-    negate: true
-    match: after
+# multiline:
+#    pattern: '^\d{4}-\d{1,2}-\d{1,2}\s\d{1,2}:\d{1,2}:\d{1,2}'
+#    negate: true
+#    match: after
 
 #processors:
 #- add_cloud_metadata:
