--- a/filebeat.yml
+++ b/filebeat.yml
@@ -11,7 +11,8 @@ filebeat.inputs:
   fields:
     log_topic: '${LOG_TOPIC:elib-gateway}'
   
-  scan_frequency: 5s
+  scan_frequency: 10s
+  tail_files: true
   exclude_lines: ['^$']
   
   multiline:
