--- a/filebeat.yml
+++ b/filebeat.yml
@@ -10,11 +10,11 @@ filebeat.inputs:
     - ${INPUT_PATH:/volume/*.log}
   fields:
     log_topics: '${LOG_TOPIC:elib-gateway}'
-  
+  tags: '${[fields][log_topics]}'
   scan_frequency: 10s
   tail_files: true
   exclude_lines: ['^$']
-  tags: '${[log_topics]}'
+  
   
   multiline:
     pattern: '^\d{4}-\d{1,2}-\d{1,2}\s\d{1,2}:\d{1,2}:\d{1,2}'
