--- a/filebeat.yml
+++ b/filebeat.yml
@@ -10,7 +10,7 @@ filebeat.inputs:
     - ${INPUT_PATH:/volume/*.log}
   fields:
     log_topics: '${LOG_TOPIC:elib-gateway}'
-  tags: '${[fields][log_topics]}'
+  tags: '${TAGS:elib-gateway}'
   scan_frequency: 10s
   tail_files: true
   exclude_lines: ['^$']
