--- a/filebeat.yml
+++ b/filebeat.yml
@@ -23,7 +23,7 @@ filebeat.inputs:
 
 processors:
 - drop_fields:
-    fields: ["input_type", "beat", "offset", "source","metadata"]
+    fields: ["beat.hostname", "beat.name", "beat.version", "input_type", "beat"]
 
 output.redis:
   enabled: true
