--- a/filebeat.yml
+++ b/filebeat.yml
@@ -16,14 +16,18 @@ filebeat.inputs:
   exclude_lines: ['^$']
   
   
+#  multiline:
+#    pattern: '^\d{4}-\d{1,2}-\d{1,2}\s\d{1,2}:\d{1,2}:\d{1,2}'
+#    negate: true
+#    match: after
   multiline:
-    pattern: '^\d{4}-\d{1,2}-\d{1,2}\s\d{1,2}:\d{1,2}:\d{1,2}'
+    pattern: '^.+(- -) \d{4}(-\d\d){2} \d\d:\d\d:\d\d'
     negate: true
-    match: after
-
+    what: "previous"
+    
 processors:
   - drop_fields:    
-      fields: ["ecs","input","agent","@metadata"]
+      fields: ["ecs","input","agent","input"]
 
 output.redis:
   enabled: true
