--- a/filebeat.yml
+++ b/filebeat.yml
@@ -14,17 +14,12 @@ filebeat.inputs:
   scan_frequency: 10s
   tail_files: true
   exclude_lines: ['^$']
-  
-  
-#  multiline:
-#    pattern: '^\d{4}-\d{1,2}-\d{1,2}\s\d{1,2}:\d{1,2}:\d{1,2}'
-#    negate: true
-#    match: after
+    
   multiline:
-    pattern: '^.+(- -) \d{4}(-\d\d){2} \d\d:\d\d:\d\d'
+    pattern: '^\d{4}-\d{1,2}-\d{1,2}\s\d{1,2}:\d{1,2}:\d{1,2}'
     negate: true
     match: after
-    
+
 processors:
   - drop_fields:    
       fields: ["ecs","input","agent","input"]
