--- a/filebeat.yml
+++ b/filebeat.yml
@@ -4,19 +4,19 @@ filebeat.config:
     reload.enabled: true
 
 filebeat.inputs:
-- type: log
+- type: json
   enabled: true
   paths:
     - ${INPUT_PATH:/volume/*.log}
+  json.keys_under_root: true
+  json.overwrite_keys: true
+  
   fields:
     log_topics: '${LOG_TOPIC:elib-gateway}'
   tags: '${TAGS:elib-gateway}'
   scan_frequency: 10s
   tail_files: true
   exclude_lines: ['^$']
-  
-  json.keys_under_root: true
-  json.overwrite_keys: true
     
   multiline:
     pattern: '^\d{4}-\d{1,2}-\d{1,2}\s\d{1,2}:\d{1,2}:\d{1,2}'
