--- a/filebeat.yml
+++ b/filebeat.yml
@@ -28,6 +28,6 @@ processors:
 output.redis:
   enabled: true
   hosts: '${REDIS_HOSTS:192.168.10.212:10021}'
-  password: '${REDIS_PASSWORD:2lb097mcQ23iESrB}'
+  password: '${REDIS_PASSWORD:hdfissufoiusn2378}'
   key: '${REDIS_KEY:product_logsrv}'
   db: '${REDIS_DB:1}'
