--- a/filebeat.yml
+++ b/filebeat.yml
@@ -9,8 +9,8 @@ filebeat.inputs:
   paths:
     - ${INPUT_PATH:/volume/*.log}
 
-#  fields:
-#    log_topics: '${LOG_TOPIC:elib-gateway}'
+  fields:
+    log_topics: '${LOG_TOPIC:elib-gateway}'
 #  tags: '${TAGS:elib-gateway}'
   scan_frequency: 10s
   tail_files: true
