--- a/filebeat.yml
+++ b/filebeat.yml
@@ -5,7 +5,7 @@ filebeat.config:
 
 filebeat.inputs:
 - type: log
-  enabled: false
+  enabled: true
   paths:
     - ${INPUT_PATH:/volume/*.log}
 
@@ -13,7 +13,7 @@ filebeat.inputs:
     log_topics: '${LOG_TOPIC:elib-gateway}'
 #  tags: '${TAGS:elib-gateway}'
   scan_frequency: 10s
-  tail_files: true
+  tail_files: false
   exclude_lines: ['^$']
     
   multiline:
