--- a/filebeat.yml
+++ b/filebeat.yml
@@ -1,7 +1,7 @@
 filebeat.config:
   modules:
     path: ${path.config}/modules.d/*.yml
-    reload.enabled: true
+    reload.enabled: false
 
 filebeat.inputs:
 - type: log
