--- a/filebeat.yml
+++ b/filebeat.yml
@@ -12,8 +12,8 @@ filebeat.inputs:
   fields:
     log_topics: '${LOG_TOPIC:elib-gateway}'
 #  tags: '${TAGS:elib-gateway}'
-  scan_frequency: 10s
-  tail_files: false
+  scan_frequency: 60s
+  tail_files: ture
   exclude_lines: ['^$']
     
   multiline:
