--- a/filebeat.yml
+++ b/filebeat.yml
@@ -1,7 +1,7 @@
 filebeat.config:
   modules:
     path: ${path.config}/modules.d/*.yml
-    reload.enabled: false
+    reload.enabled: true
 
 filebeat.inputs:
 - type: log
@@ -12,7 +12,7 @@ filebeat.inputs:
   fields:
     log_topics: '${LOG_TOPIC:elib-gateway}'
 #  tags: '${TAGS:elib-gateway}'
-  scan_frequency: 60s
+  scan_frequency: 10s
   tail_files: ture
   exclude_lines: ['^$']
     
@@ -20,6 +20,7 @@ filebeat.inputs:
     pattern: '^\['
     negate: true
     match: after
+
 
 processors:
 - drop_fields:    
@@ -31,5 +32,5 @@ output.redis:
   password: '${REDIS_PASSWORD:hdfissufoiusn2378}'
   key: '${REDIS_KEY:product_logsrv}'
   db: '${REDIS_DB:1}'
-max_procs: '${MAX_PROCS:1}'
-logging.level: '${LOG_LEVEL:warning}'
+#max_procs: '${MAX_PROCS:1}'
+logging.level: '${LOGG_LEVEL:warning}'
