--- a/filebeat.yml
+++ b/filebeat.yml
@@ -33,4 +33,4 @@ output.redis:
   key: '${REDIS_KEY:product_logsrv}'
   db: '${REDIS_DB:1}'
 #max_procs: '${MAX_PROCS:1}'
-logging.level: '${LOGG_LEVEL:warning}'
+logging.level: warning
